--- a/html/register.html
+++ b/html/register.html
@@ -5,17 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href="../icono/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../icono/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../icono/favicon-16x16.png">
-    <link rel="manifest" href="../icono/site.webmanifest">
-    <link rel="mask-icon" href="../icono/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="../icono/favicon.ico">
+    <!-- LINKS DE ICONOS Y FAVICONS -->
+    <link rel="apple-touch-icon" sizes="180x180" href="../icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../icons/favicon-16x16.png">
+    <link rel="manifest" href="../icons/site.webmanifest">
+    <link rel="mask-icon" href="../icons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="../icons/favicon.ico">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-config" content="../icono/browserconfig.xml">
+    <meta name="msapplication-config" content="../icons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
+    <!-- LINKS DE CSS -->
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <!-- Custom -->
     <link rel="stylesheet" href="../css/style.css">
     <title>Nekzus Game Store</title>
 </head>
@@ -88,7 +92,7 @@
             </div>
             <div class="formGroup centerItemsGrid">
                 <h3>Completa todos los campos</h3>
-                <form>
+                <form class="form">
                     <div class="mb-3 camp">
                         <label for="name" class="form-label">Nombre</label>
                         <input type="text" class="form-control" id="name" placeholder="Nombre de usuario" required>
@@ -172,7 +176,8 @@
             <p class="copyright">&copy; 2022 Copyright - Nekzus Game Store</p>
         </div>
     </footer>
-
+    <!-- LINKS DE CSS -->
+    <!-- Script Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
