--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="apple-touch-icon" sizes="180x180" href="icono/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="icono/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="icono/favicon-16x16.png">
-    <link rel="manifest" href="icono/site.webmanifest">
-    <link rel="mask-icon" href="icono/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="icono/favicon.ico">
+    <!-- LINKS DE ICONOS Y FAVICONS -->
+    <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+    <link rel="manifest" href="icons/site.webmanifest">
+    <link rel="mask-icon" href="icons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="icons/favicon.ico">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-config" content="icono/browserconfig.xml">
+    <meta name="msapplication-config" content="icons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
+    <!-- LINKS DE CSS -->
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+     <!-- Custom -->
     <link rel="stylesheet" href="./css/style.css" />
     <title>Nekzus Game Store</title>
 </head>
@@ -290,21 +294,21 @@
             </div>
         </section>
         <!-- Menu off-canvas carrito de compras -->
-        <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="menuCart"
-            aria-labelledby="menuCartLabel">
-            <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="menuCartLabel">Carrito de compras</h5>
-                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
-                    aria-label="Close"></button>
+            <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="menuCart"
+                aria-labelledby="menuCartLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="menuCartLabel">Carrito de compras</h5>
+                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+                        aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <h5 class="product">Producto</h5>
+                    <h5 class="price">Subtotal</h5>
+                    <h6 class="total">Total:</h6>
+                    <h6 class="totalPrice">$ total:</h6>
+                    <button type="button" class="btnBuy btn btn-outline-info">Comprar</button>
+                </div>
             </div>
-            <div class="offcanvas-body">
-                <h5 class="product">Producto</h5>
-                <h5 class="price">Subtotal</h5>
-                <h6 class="total">Total:</h6>
-                <h6 class="totalPrice">$ total:</h6>
-                <button type="button" class="btnBuy btn btn-outline-info">Comprar</button>
-            </div>
-        </div>
     </main>
     <footer>
         <div class="footerSocials">
@@ -350,7 +354,8 @@
             <p class="copyright">&copy; 2022 Copyright - Nekzus Game Store</p>
         </div>
     </footer>
-
+    <!-- LINKS DE CSS -->
+    <!-- Script Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
