--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <!-- AOS animaciones -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Custom -->
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/animation.css" />
     <title>Nekzus Game Store</title>
 </head>
 
@@ -222,20 +223,21 @@
                 </div>
             </div>
         </section>
+        <!-- Animacion faces -->
         <section class="animationContainer">
-            <label>
+            <label class="animation" data-aos="fade-right">
                 <input type="radio" name="pink">
                 <div class="face"></div>
             </label>
-            <label>
+            <label class="animation" data-aos="fade-right">
                 <input type="radio" name="green">
                 <div class="face"></div>
             </label>
-            <label>
+            <label class="animation" data-aos="fade-left">
                 <input type="radio" name="pink">
                 <div class="face"></div>
             </label>
-            <label>
+            <label class="animation" data-aos="fade-left">
                 <input type="radio" name="green">
                 <div class="face"></div>
             </label>
@@ -356,7 +358,7 @@
     <footer>
         <div class="footerSocials">
             <!-- Sobre nosotros -->
-            <section class="sectionAbout">
+            <section class="sectionAbout" data-aos="zoom-in">
                 <h3>Sobre Nekzus Game Store</h3>
                 <p>
                     Nekzus Game Store es una tienda de videojuegos en línea, donde
@@ -366,14 +368,14 @@
             </section>
             <!-- Redes sociales, newsletter y contacto -->
             <section class="sectionSocials">
-                <div class="newsletter">
+                <div class="newsletter" data-aos="zoom-in">
                     <h3>Suscribete</h3>
                     <form action="#">
                         <input type="email" name="email" id="email" placeholder="Ingresa tu email" />
                         <button class="btnSubmitNews btn btn-outline-info">Enviar</button>
                     </form>
                 </div>
-                <div class="socials">
+                <div class="socials" data-aos="zoom-in">
                     <h3>Síguenos en:</h3>
                     <a href="https://www.youtube.com/" title="YouTube" target="_blank"><i id="youtube"
                             class="bi bi-youtube"></i></a>
@@ -382,7 +384,7 @@
                     <a href="https://www.instagram.com/" title="Instagram" target="_blank"><i id="instagram"
                             class="bi bi-instagram"></i></a>
                 </div>
-                <div class="contact">
+                <div class="contact" data-aos="zoom-in">
                     <h3>Contacto</h3>
                     <p>Nekzus Game Store</p>
                     <p>Avenida Siempreviva, 742</p>
@@ -400,6 +402,11 @@
     <!-- Script Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+    <!-- Script AOS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
     </script>
 </body>
 
