--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- AOS animaciones -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Custom -->
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/stylescss.css" />
     <title>Nekzus Game Store</title>
 </head>
 
