--- a/html/products.html
+++ b/html/products.html
@@ -23,7 +23,13 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Custom -->
     <link rel="stylesheet" href="../css/stylescss.css">
-    <title>Nekzus Game Store</title>
+    <title>Nekzus Game Store - Products Page</title>
+    <!-- META DESCRIPTION -->
+    <meta name="description"
+        content="Nekzus Game Store es una tienda de videojuegos en línea, donde podrás encontrar todo tipo de videojuegos, desde los más populares hasta los más nuevos.">
+    <!-- META KEYWORDS -->
+    <meta name="keywords"
+        content="games, store, tienda, videojuegos, juegos, pc, playstation, xbox, nintendo, ps4, switch">
 </head>
 
 <body>
